fixing word wrap on blocks

--- a/front_end/style.css
+++ b/front_end/style.css
@@ -104,3 +104,7 @@
       .pythonBlock .logContent{
             background-image: url('images/pythonBackground.png');
       }
+
+      .block{
+            word-wrap:break-word;
+      }
